corrected spacing

--- a/src/style.css
+++ b/src/style.css
@@ -16,3 +16,18 @@ h1 {
   font-weight: 100;
   line-height: 28px;
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: #878787;
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+}
